# spatel-cv

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: personal-model.md  provider-models.md
src/: ambient.rs  app.rs  data.rs  main.rs  persona.rs  ui.rs
